lab6/src/main.output
Terminals unused in grammar

    INCLUDE
    DOUBLE
    LONG
    SHORT
    THIS
    DEFAULT
    USING
    SWITCH
    CASE
    BREAK
    CONTINUE
    DO
    GOTO
    CLASS
    STRUCT
    OPAND
    OPOR
    POWER
    OPNOT
    SHIFTL
    SHIFTR
    LBRACKET
    RBRACKET
    BIT_OR
    SQUOTE
    DQUOTE
    COLON


Rules useless in parser due to conflicts

   54 assign_expr: id EQ assign_expr


State 53 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 55 conflicts: 6 shift/reduce
State 56 conflicts: 2 shift/reduce
State 57 conflicts: 3 shift/reduce
State 109 conflicts: 2 reduce/reduce
State 116 conflicts: 16 reduce/reduce
State 142 conflicts: 1 shift/reduce
State 144 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: INT MAIN LPAREN RPAREN compound_stmt
    2        | VOID MAIN LPAREN RPAREN compound_stmt

    3 compound_stmt: LBRACE stmt_list RBRACE
    4              | LBRACE stmt_list RETURN expression SEMICOLON RBRACE
    5              | LBRACE RBRACE

    6 stmt_list: stmt_list stmt
    7          | stmt

    8 stmt: expr_stmt
    9     | declaration
   10     | if_stmt
   11     | while_stmt
   12     | for_stmt
   13     | printf_stmt
   14     | scanf_stmt
   15     | ret_stmt

   16 declaration: var_declaration
   17            | const_declaration

   18 var_declaration: type idlist SEMICOLON

   19 const_declaration: CONST type idlist SEMICOLON

   20 type: INT
   21     | CHAR
   22     | BOOL
   23     | FLOAT
   24     | STRING

   25 idlist: idlist COMMA id_or_assign
   26       | id_or_assign

   27 id_or_assign: id
   28             | assign_expr

   29 id: ID

   30 expr_stmt: expression SEMICOLON

   31 if_stmt: IF LPAREN expression RPAREN stmt
   32        | IF LPAREN expression RPAREN stmt ELSE stmt
   33        | IF LPAREN expression RPAREN compound_stmt
   34        | IF LPAREN expression RPAREN compound_stmt ELSE compound_stmt
   35        | IF LPAREN expression RPAREN compound_stmt ELSE if_stmt

   36 while_stmt: WHILE LPAREN expression RPAREN compound_stmt

   37 for_stmt: FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN compound_stmt
   38         | FOR LPAREN var_declaration expression SEMICOLON expression RPAREN compound_stmt

   39 scanf_stmt: SCANF LPAREN func_call_idlist RPAREN SEMICOLON

   40 printf_stmt: PRINTF LPAREN func_call_idlist RPAREN SEMICOLON

   41 ret_stmt: RETURN expression SEMICOLON

   42 func_call_idlist: func_call_id
   43                 | func_call_idlist COMMA func_call_id

   44 func_call_id: expression
   45             | factor
   46             | conststring
   47             | AND ID

   48 conststring: CONSTSTRING

   49 expression: assign_expr
   50           | not_expression

   51 assign_expr: id EQ expression
   52            | id AEQ expression
   53            | id SEQ expression
   54            | id EQ assign_expr

   55 not_expression: NOT or_expression
   56               | or_expression

   57 or_expression: or_expression OR and_expression
   58              | and_expression

   59 and_expression: and_expression AND relation_expr
   60               | relation_expr

   61 relation_expr: relation_expr GT op_expr
   62              | relation_expr LT op_expr
   63              | relation_expr EQUAL op_expr
   64              | relation_expr NEQUAL op_expr
   65              | relation_expr GE op_expr
   66              | relation_expr LE op_expr
   67              | TRUE
   68              | FALSE
   69              | op_expr

   70 op_expr: id INC
   71        | id DEC
   72        | op_expr ADD term
   73        | op_expr SUB term
   74        | term

   75 term: term MUL factor
   76     | term DIV factor
   77     | term MOD factor
   78     | factor

   79 factor: LPAREN expression RPAREN
   80       | INTNUMBER
   81       | id
   82       | CONSTCHAR
   83       | BIT_AND id
   84       | SUB expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INCLUDE (258)
    INT (259) 1 20
    BOOL (260) 22
    TRUE (261) 67
    FALSE (262) 68
    CHAR (263) 21
    FLOAT (264) 23
    DOUBLE (265)
    LONG (266)
    SHORT (267)
    VOID (268) 2
    MAIN (269) 1 2
    THIS (270)
    DEFAULT (271)
    USING (272)
    IF (273) 31 32 33 34 35
    ELSE (274) 32 34 35
    SWITCH (275)
    CASE (276)
    FOR (277) 37 38
    WHILE (278) 36
    BREAK (279)
    CONTINUE (280)
    DO (281)
    GOTO (282)
    RETURN (283) 4 41
    CLASS (284)
    STRUCT (285)
    CONST (286) 19
    STRING (287) 24
    SCANF (288) 39
    PRINTF (289) 40
    MOD (290) 77
    INC (291) 70
    DEC (292) 71
    ADD (293) 72
    SUB (294) 73 84
    MUL (295) 75
    DIV (296) 76
    OPAND (297)
    OPOR (298)
    POWER (299)
    OPNOT (300)
    SHIFTL (301)
    SHIFTR (302)
    LPAREN (303) 1 2 31 32 33 34 35 36 37 38 39 40 79
    RPAREN (304) 1 2 31 32 33 34 35 36 37 38 39 40 79
    LBRACKET (305)
    RBRACKET (306)
    LBRACE (307) 3 4 5
    RBRACE (308) 3 4 5
    GT (309) 61
    LT (310) 62
    EQ (311) 51 54
    EQUAL (312) 63
    NEQUAL (313) 64
    GE (314) 65
    LE (315) 66
    OR (316) 57
    AND (317) 47 59
    NOT (318) 55
    BIT_AND (319) 83
    BIT_OR (320)
    AEQ (321) 52
    SEQ (322) 53
    SQUOTE (323)
    DQUOTE (324)
    COLON (325)
    SEMICOLON (326) 4 18 19 30 37 38 39 40 41
    COMMA (327) 25 43
    CONSTCHAR (328) 82
    CONSTSTRING (329) 48
    ID (330) 29 47
    INTNUMBER (331) 80
    UMINUS (332)


Nonterminals, with rules where they appear

    $accept (78)
        on left: 0
    program (79)
        on left: 1 2
        on right: 0
    compound_stmt (80)
        on left: 3 4 5
        on right: 1 2 33 34 35 36 37 38
    stmt_list (81)
        on left: 6 7
        on right: 3 4 6
    stmt (82)
        on left: 8 9 10 11 12 13 14 15
        on right: 6 7 31 32
    declaration (83)
        on left: 16 17
        on right: 9
    var_declaration (84)
        on left: 18
        on right: 16 38
    const_declaration (85)
        on left: 19
        on right: 17
    type (86)
        on left: 20 21 22 23 24
        on right: 18 19
    idlist (87)
        on left: 25 26
        on right: 18 19 25
    id_or_assign (88)
        on left: 27 28
        on right: 25 26
    id (89)
        on left: 29
        on right: 27 51 52 53 54 70 71 81 83
    expr_stmt (90)
        on left: 30
        on right: 8
    if_stmt (91)
        on left: 31 32 33 34 35
        on right: 10 35
    while_stmt (92)
        on left: 36
        on right: 11
    for_stmt (93)
        on left: 37 38
        on right: 12
    scanf_stmt (94)
        on left: 39
        on right: 14
    printf_stmt (95)
        on left: 40
        on right: 13
    ret_stmt (96)
        on left: 41
        on right: 15
    func_call_idlist (97)
        on left: 42 43
        on right: 39 40 43
    func_call_id (98)
        on left: 44 45 46 47
        on right: 42 43
    conststring (99)
        on left: 48
        on right: 46
    expression (100)
        on left: 49 50
        on right: 4 30 31 32 33 34 35 36 37 38 41 44 51 52 53 79 84
    assign_expr (101)
        on left: 51 52 53 54
        on right: 28 49 54
    not_expression (102)
        on left: 55 56
        on right: 50
    or_expression (103)
        on left: 57 58
        on right: 55 56 57
    and_expression (104)
        on left: 59 60
        on right: 57 58 59
    relation_expr (105)
        on left: 61 62 63 64 65 66 67 68 69
        on right: 59 60 61 62 63 64 65 66
    op_expr (106)
        on left: 70 71 72 73 74
        on right: 61 62 63 64 65 66 69 72 73
    term (107)
        on left: 75 76 77 78
        on right: 72 73 74 75 76 77
    factor (108)
        on left: 79 80 81 82 83 84
        on right: 45 75 76 77 78


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program  go to state 3


State 1

    1 program: INT . MAIN LPAREN RPAREN compound_stmt

    MAIN  shift, and go to state 4


State 2

    2 program: VOID . MAIN LPAREN RPAREN compound_stmt

    MAIN  shift, and go to state 5


State 3

    0 $accept: program . $end

    $end  shift, and go to state 6


State 4

    1 program: INT MAIN . LPAREN RPAREN compound_stmt

    LPAREN  shift, and go to state 7


State 5

    2 program: VOID MAIN . LPAREN RPAREN compound_stmt

    LPAREN  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    1 program: INT MAIN LPAREN . RPAREN compound_stmt

    RPAREN  shift, and go to state 9


State 8

    2 program: VOID MAIN LPAREN . RPAREN compound_stmt

    RPAREN  shift, and go to state 10


State 9

    1 program: INT MAIN LPAREN RPAREN . compound_stmt

    LBRACE  shift, and go to state 11

    compound_stmt  go to state 12


State 10

    2 program: VOID MAIN LPAREN RPAREN . compound_stmt

    LBRACE  shift, and go to state 11

    compound_stmt  go to state 13


State 11

    3 compound_stmt: LBRACE . stmt_list RBRACE
    4              | LBRACE . stmt_list RETURN expression SEMICOLON RBRACE
    5              | LBRACE . RBRACE

    INT        shift, and go to state 14
    BOOL       shift, and go to state 15
    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    CHAR       shift, and go to state 18
    FLOAT      shift, and go to state 19
    IF         shift, and go to state 20
    FOR        shift, and go to state 21
    WHILE      shift, and go to state 22
    RETURN     shift, and go to state 23
    CONST      shift, and go to state 24
    STRING     shift, and go to state 25
    SCANF      shift, and go to state 26
    PRINTF     shift, and go to state 27
    SUB        shift, and go to state 28
    LPAREN     shift, and go to state 29
    RBRACE     shift, and go to state 30
    NOT        shift, and go to state 31
    BIT_AND    shift, and go to state 32
    CONSTCHAR  shift, and go to state 33
    ID         shift, and go to state 34
    INTNUMBER  shift, and go to state 35

    stmt_list          go to state 36
    stmt               go to state 37
    declaration        go to state 38
    var_declaration    go to state 39
    const_declaration  go to state 40
    type               go to state 41
    id                 go to state 42
    expr_stmt          go to state 43
    if_stmt            go to state 44
    while_stmt         go to state 45
    for_stmt           go to state 46
    scanf_stmt         go to state 47
    printf_stmt        go to state 48
    ret_stmt           go to state 49
    expression         go to state 50
    assign_expr        go to state 51
    not_expression     go to state 52
    or_expression      go to state 53
    and_expression     go to state 54
    relation_expr      go to state 55
    op_expr            go to state 56
    term               go to state 57
    factor             go to state 58


State 12

    1 program: INT MAIN LPAREN RPAREN compound_stmt .

    $default  reduce using rule 1 (program)


State 13

    2 program: VOID MAIN LPAREN RPAREN compound_stmt .

    $default  reduce using rule 2 (program)


State 14

   20 type: INT .

    $default  reduce using rule 20 (type)


State 15

   22 type: BOOL .

    $default  reduce using rule 22 (type)


State 16

   67 relation_expr: TRUE .

    $default  reduce using rule 67 (relation_expr)


State 17

   68 relation_expr: FALSE .

    $default  reduce using rule 68 (relation_expr)


State 18

   21 type: CHAR .

    $default  reduce using rule 21 (type)


State 19

   23 type: FLOAT .

    $default  reduce using rule 23 (type)


State 20

   31 if_stmt: IF . LPAREN expression RPAREN stmt
   32        | IF . LPAREN expression RPAREN stmt ELSE stmt
   33        | IF . LPAREN expression RPAREN compound_stmt
   34        | IF . LPAREN expression RPAREN compound_stmt ELSE compound_stmt
   35        | IF . LPAREN expression RPAREN compound_stmt ELSE if_stmt

    LPAREN  shift, and go to state 59


State 21

   37 for_stmt: FOR . LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN compound_stmt
   38         | FOR . LPAREN var_declaration expression SEMICOLON expression RPAREN compound_stmt

    LPAREN  shift, and go to state 60


State 22

   36 while_stmt: WHILE . LPAREN expression RPAREN compound_stmt

    LPAREN  shift, and go to state 61


State 23

   41 ret_stmt: RETURN . expression SEMICOLON

    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    SUB        shift, and go to state 28
    LPAREN     shift, and go to state 29
    NOT        shift, and go to state 31
    BIT_AND    shift, and go to state 32
    CONSTCHAR  shift, and go to state 33
    ID         shift, and go to state 34
    INTNUMBER  shift, and go to state 35

    id              go to state 42
    expression      go to state 62
    assign_expr     go to state 51
    not_expression  go to state 52
    or_expression   go to state 53
    and_expression  go to state 54
    relation_expr   go to state 55
    op_expr         go to state 56
    term            go to state 57
    factor          go to state 58


State 24

   19 const_declaration: CONST . type idlist SEMICOLON

    INT     shift, and go to state 14
    BOOL    shift, and go to state 15
    CHAR    shift, and go to state 18
    FLOAT   shift, and go to state 19
    STRING  shift, and go to state 25

    type  go to state 63


State 25

   24 type: STRING .

    $default  reduce using rule 24 (type)


State 26

   39 scanf_stmt: SCANF . LPAREN func_call_idlist RPAREN SEMICOLON

    LPAREN  shift, and go to state 64


State 27

   40 printf_stmt: PRINTF . LPAREN func_call_idlist RPAREN SEMICOLON

    LPAREN  shift, and go to state 65


State 28

   84 factor: SUB . expression

    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    SUB        shift, and go to state 28
    LPAREN     shift, and go to state 29
    NOT        shift, and go to state 31
    BIT_AND    shift, and go to state 32
    CONSTCHAR  shift, and go to state 33
    ID         shift, and go to state 34
    INTNUMBER  shift, and go to state 35

    id              go to state 42
    expression      go to state 66
    assign_expr     go to state 51
    not_expression  go to state 52
    or_expression   go to state 53
    and_expression  go to state 54
    relation_expr   go to state 55
    op_expr         go to state 56
    term            go to state 57
    factor          go to state 58


State 29

   79 factor: LPAREN . expression RPAREN

    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    SUB        shift, and go to state 28
    LPAREN     shift, and go to state 29
    NOT        shift, and go to state 31
    BIT_AND    shift, and go to state 32
    CONSTCHAR  shift, and go to state 33
    ID         shift, and go to state 34
    INTNUMBER  shift, and go to state 35

    id              go to state 42
    expression      go to state 67
    assign_expr     go to state 51
    not_expression  go to state 52
    or_expression   go to state 53
    and_expression  go to state 54
    relation_expr   go to state 55
    op_expr         go to state 56
    term            go to state 57
    factor          go to state 58


State 30

    5 compound_stmt: LBRACE RBRACE .

    $default  reduce using rule 5 (compound_stmt)


State 31

   55 not_expression: NOT . or_expression

    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    SUB        shift, and go to state 28
    LPAREN     shift, and go to state 29
    BIT_AND    shift, and go to state 32
    CONSTCHAR  shift, and go to state 33
    ID         shift, and go to state 34
    INTNUMBER  shift, and go to state 35

    id              go to state 68
    or_expression   go to state 69
    and_expression  go to state 54
    relation_expr   go to state 55
    op_expr         go to state 56
    term            go to state 57
    factor          go to state 58


State 32

   83 factor: BIT_AND . id

    ID  shift, and go to state 34

    id  go to state 70


State 33

   82 factor: CONSTCHAR .

    $default  reduce using rule 82 (factor)


State 34

   29 id: ID .

    $default  reduce using rule 29 (id)


State 35

   80 factor: INTNUMBER .

    $default  reduce using rule 80 (factor)


State 36

    3 compound_stmt: LBRACE stmt_list . RBRACE
    4              | LBRACE stmt_list . RETURN expression SEMICOLON RBRACE
    6 stmt_list: stmt_list . stmt

    INT        shift, and go to state 14
    BOOL       shift, and go to state 15
    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    CHAR       shift, and go to state 18
    FLOAT      shift, and go to state 19
    IF         shift, and go to state 20
    FOR        shift, and go to state 21
    WHILE      shift, and go to state 22
    RETURN     shift, and go to state 71
    CONST      shift, and go to state 24
    STRING     shift, and go to state 25
    SCANF      shift, and go to state 26
    PRINTF     shift, and go to state 27
    SUB        shift, and go to state 28
    LPAREN     shift, and go to state 29
    RBRACE     shift, and go to state 72
    NOT        shift, and go to state 31
    BIT_AND    shift, and go to state 32
    CONSTCHAR  shift, and go to state 33
    ID         shift, and go to state 34
    INTNUMBER  shift, and go to state 35

    stmt               go to state 73
    declaration        go to state 38
    var_declaration    go to state 39
    const_declaration  go to state 40
    type               go to state 41
    id                 go to state 42
    expr_stmt          go to state 43
    if_stmt            go to state 44
    while_stmt         go to state 45
    for_stmt           go to state 46
    scanf_stmt         go to state 47
    printf_stmt        go to state 48
    ret_stmt           go to state 49
    expression         go to state 50
    assign_expr        go to state 51
    not_expression     go to state 52
    or_expression      go to state 53
    and_expression     go to state 54
    relation_expr      go to state 55
    op_expr            go to state 56
    term               go to state 57
    factor             go to state 58


State 37

    7 stmt_list: stmt .

    $default  reduce using rule 7 (stmt_list)


State 38

    9 stmt: declaration .

    $default  reduce using rule 9 (stmt)


State 39

   16 declaration: var_declaration .

    $default  reduce using rule 16 (declaration)


State 40

   17 declaration: const_declaration .

    $default  reduce using rule 17 (declaration)


State 41

   18 var_declaration: type . idlist SEMICOLON

    ID  shift, and go to state 34

    idlist        go to state 74
    id_or_assign  go to state 75
    id            go to state 76
    assign_expr   go to state 77


State 42

   51 assign_expr: id . EQ expression
   52            | id . AEQ expression
   53            | id . SEQ expression
   54            | id . EQ assign_expr
   70 op_expr: id . INC
   71        | id . DEC
   81 factor: id .

    INC  shift, and go to state 78
    DEC  shift, and go to state 79
    EQ   shift, and go to state 80
    AEQ  shift, and go to state 81
    SEQ  shift, and go to state 82

    $default  reduce using rule 81 (factor)


State 43

    8 stmt: expr_stmt .

    $default  reduce using rule 8 (stmt)


State 44

   10 stmt: if_stmt .

    $default  reduce using rule 10 (stmt)


State 45

   11 stmt: while_stmt .

    $default  reduce using rule 11 (stmt)


State 46

   12 stmt: for_stmt .

    $default  reduce using rule 12 (stmt)


State 47

   14 stmt: scanf_stmt .

    $default  reduce using rule 14 (stmt)


State 48

   13 stmt: printf_stmt .

    $default  reduce using rule 13 (stmt)


State 49

   15 stmt: ret_stmt .

    $default  reduce using rule 15 (stmt)


State 50

   30 expr_stmt: expression . SEMICOLON

    SEMICOLON  shift, and go to state 83


State 51

   49 expression: assign_expr .

    $default  reduce using rule 49 (expression)


State 52

   50 expression: not_expression .

    $default  reduce using rule 50 (expression)


State 53

   56 not_expression: or_expression .
   57 or_expression: or_expression . OR and_expression

    OR  shift, and go to state 84

    OR        [reduce using rule 56 (not_expression)]
    $default  reduce using rule 56 (not_expression)


State 54

   58 or_expression: and_expression .
   59 and_expression: and_expression . AND relation_expr

    AND  shift, and go to state 85

    AND       [reduce using rule 58 (or_expression)]
    $default  reduce using rule 58 (or_expression)


State 55

   60 and_expression: relation_expr .
   61 relation_expr: relation_expr . GT op_expr
   62              | relation_expr . LT op_expr
   63              | relation_expr . EQUAL op_expr
   64              | relation_expr . NEQUAL op_expr
   65              | relation_expr . GE op_expr
   66              | relation_expr . LE op_expr

    GT      shift, and go to state 86
    LT      shift, and go to state 87
    EQUAL   shift, and go to state 88
    NEQUAL  shift, and go to state 89
    GE      shift, and go to state 90
    LE      shift, and go to state 91
